<resources>
    <string name="app_name">P1281_AudioFocus</string>
    <string name="music">Music</string>
    <string name="sound_gain">Sound Gain</string>
    <string name="sound_gain_transient">Sound Gain Transient</string>
    <string name="sound_gain_transient_duck">Sound Gain Transient Duck</string>
    <string name="sound_gain_transient_exclusive">Sound Gain Transient Exclusive</string>
</resources>
