<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samsung.p1281_audiofocus.MainActivity">

    <Button
        android:id="@+id/btnPlayMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onClickMusic"
        android:text="@string/music" />
    <Button
        android:id="@+id/btnPlaySoundG"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/btnPlayMusic"
        android:onClick="onClickSound"
        android:text="@string/sound_gain" />
    <Button
        android:id="@+id/btnPlaySoundGT"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnPlaySoundG"
        android:layout_toRightOf="@id/btnPlaySoundG"
        android:onClick="onClickSound"
        android:text="@string/sound_gain_transient" />
    <Button
        android:id="@+id/btnPlaySoundGTD"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnPlaySoundG"
        android:layout_toRightOf="@id/btnPlaySoundGT"
        android:onClick="onClickSound"
        android:text="@string/sound_gain_transient_duck" />
    <Button
        android:id="@+id/btnPlaySoundGTE"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnPlaySoundG"
        android:layout_toRightOf="@id/btnPlaySoundGTD"
        android:onClick="onClickSound"
        android:text="@string/sound_gain_transient_exclusive" />

</RelativeLayout>
